# sentiment-analysis-models

./: LICENSE  README.md  setup.cfg  setup.py
notebooks/: logistic_regression.ipynb
sentiment_analysis_models/data/: pipeline.py
tests/: test_pipeline.py
