[metadata]
name = sentiment-analysis-models
version = 0.0.1
author = German Eduardo Melo
author_email = germaneduardo.melo@gmail
description = Package with utilities related with solving sentiment classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/germaneduardo/sentiment-analysis-models
project_urls =
    Bug Tracker = https://github.com/germaneduardo/sentiment-analysis-models/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sentiment_analysis_models
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sentiment_analysis_models